# weather_scrapper

./: Cargo.toml  Dockerfile
src/: main.rs
src/sinks/: google_sheet.rs  mod.rs
src/sources/: mod.rs  weather_yr.rs
