[package]
name = "weather_scrapper"
version = "0.1.0"
edition = "2021"
authors = ["Anthony Griffon <an.griffon@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"                          # Flexible concrete Error type built on std::error::Error
chrono = { version = "0.4", features = ["serde"] }                   # Date and time library for Rust
reqwest = { version = "0.11.*", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.*"
tracing-serde = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
tracing-futures = { version = "0.2.5", default-features = false, features = ["tokio", "futures-03", "std"] }
serde_derive = "1.0"                    # Macros 1.1 implementation of #[derive(Serialize, Deserialize)]
serde = "1.0"                              # A generic serialization/deserialization framework
serde_json = "1.0"                     # A JSON serialization file format
scraper = "0.12"
select = "0.5"
