[package]
name = "weather_scrapper"
version = "0.1.0"
edition = "2021"
authors = ["Anthony Griffon <an.griffon@gmail.com>"]

[[bin]]
name = "scrapper"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"                          # Flexible concrete Error type built on std::error::Error
chrono = { version = "0.4", features = ["serde"] }                   # Date and time library for Rust
chrono-tz = { version = "0.4", features = ["serde"] }          # TimeZone implementations for rust-chrono from the IANA database
dotenv = "0.15"
google-sheets4 = "2.0"
reqwest = { version = "0.11.*", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_derive = "1.0"                    # Macros 1.1 implementation of #[derive(Serialize, Deserialize)]
serde = "1.0"                              # A generic serialization/deserialization framework
serde_json = "1.0"                     # A JSON serialization file format
yup-oauth2 = "^5.0"                                    # An oauth2 implementation, providing the 'device', 'service account' and 'instal…
hyper = "^0.14"
hyper-rustls = "^0.22"
